<resources>
    <string name="app_name">RestaurantSystem</string>
    <string name="btnSeats">空席照会</string>
    <string name="btnSend_add">追加</string>
    <string name="btnSend_change">変更</string>
    <string name="btnMenu">注文送信</string>
    <string name="tvOrderList">注文リスト</string>
    <string name="tvOrderOkList">注文済リスト</string>
    <string name="btnSearch">注文照会</string>
    <string name="btnCheck">会計</string>
    <string name="opMenu">厨房アプリ</string>
    <string name="tvJyutyu">受注食品リスト</string>
    <string name="sclStop">スクロール停止</string>
    <string name="sclStart">スクロール開始</string>
    <string name="seat">席:</string>
    <string name="quantity">個</string>
    <string name="etc">備考:</string>
    <string name="seatSelect">タップして席を選択</string>
    <string name="noSeat">席が選択されていません</string>
    <string name="zero">数量が0です！</string>
    <string name="hint">焼き加減、温度などを適宜記入</string>
    <string name="checkError">配膳されていない食品があります。会計できません！</string>
    <string name="menuNull">送信するリストがありません</string>

</resources>